sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:8: error: ';' expected but '=' found.
      gap : Int = gap * 10 / 13;
                ^